The app is complete, the user is able to receive weather data and places data, I've also added error handling and styling.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="description" content="An app that provides you with information relevant to your current area.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="City Information">
+    <script src="https://kit.fontawesome.com/8fd2318c6e.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <title>City Information</title>
   </head>
   <body>
