--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="City Information">
     <script src="https://kit.fontawesome.com/8fd2318c6e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-    <title>City Information</title>
+    <title>Navigator</title>
   </head>
   <body>
     <div id="root"></div>
